dataset1235/2025-2/1153765216/users/4118477972/executions/2747719322_3921830315.log
== SUBMISSION (2025-08-21 19:21:52)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = 2.86 * gasolina +50
imposto = round((valor * 0.34),2) + valor
print(imposto)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade de litros de gasolina:106.854
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade de litros de gasolina:634.8462
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade de litros de gasolina:258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade de litros de gasolina:401.954
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade de litros de gasolina:979.9877999999999
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade de litros de gasolina:230.5648
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:24:51)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = roud((2.86 * gasolina +50),)
imposto = round((valor * 0.34),2) + valor
print(imposto)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor = roud((2.86 * gasolina +50),)
            ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor = roud((2.86 * gasolina +50),)
            ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor = roud((2.86 * gasolina +50),)
            ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor = roud((2.86 * gasolina +50),)
            ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor = roud((2.86 * gasolina +50),)
            ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor = roud((2.86 * gasolina +50),)
            ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:23:50)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = 2.86 * gasolina +50
imposto = round((valor * 0.34),2 + valor)
print(imposto)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = round((valor * 0.34),2 + valor)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 'float' object cannot be interpreted as an integer
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = round((valor * 0.34),2 + valor)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 'float' object cannot be interpreted as an integer
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = round((valor * 0.34),2 + valor)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 'float' object cannot be interpreted as an integer
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = round((valor * 0.34),2 + valor)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 'float' object cannot be interpreted as an integer
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = round((valor * 0.34),2 + valor)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 'float' object cannot be interpreted as an integer
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = round((valor * 0.34),2 + valor)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: 'float' object cannot be interpreted as an integer
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:20:37)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = 2.86 * gasolina +50
imposto = round((valor * 0.349),)
print(imposto)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade de litros de gasolina:28
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade de litros de gasolina:165
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade de litros de gasolina:67
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade de litros de gasolina:105
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade de litros de gasolina:255
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade de litros de gasolina:60
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:35:17)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = 2.86 * gasolina +50
imposto = roud(valor *0.34, 2)
total = valor + imposto
print(round(total, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roud(valor *0.34, 2)
              ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roud(valor *0.34, 2)
              ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roud(valor *0.34, 2)
              ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roud(valor *0.34, 2)
              ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roud(valor *0.34, 2)
              ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roud(valor *0.34, 2)
              ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:35:31)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = 2.86 * gasolina + 50
imposto = roud(valor * 0.34, 2)
total = valor + imposto
print(round(total, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roud(valor * 0.34, 2)
              ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roud(valor * 0.34, 2)
              ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roud(valor * 0.34, 2)
              ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roud(valor * 0.34, 2)
              ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roud(valor * 0.34, 2)
              ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roud(valor * 0.34, 2)
              ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:21:54)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = 2.86 * gasolina +50
imposto = round((valor * 0.34),2) + valor
print(imposto)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade de litros de gasolina:106.854
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade de litros de gasolina:634.8462
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade de litros de gasolina:258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade de litros de gasolina:401.954
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade de litros de gasolina:979.9877999999999
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade de litros de gasolina:230.5648
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:21:39)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = 2.86 * gasolina +50
imposto = round((valor * 0.34),) + valor
print(imposto)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade de litros de gasolina:106.744
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade de litros de gasolina:634.7662
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade de litros de gasolina:259.0
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade de litros de gasolina:401.964
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade de litros de gasolina:980.3377999999999
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade de litros de gasolina:231.0648
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:24:03)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = 2.86 * gasolina +50
imposto = round((valor * 0.34),2) + valor
print(imposto)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade de litros de gasolina:106.854
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade de litros de gasolina:634.8462
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade de litros de gasolina:258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade de litros de gasolina:401.954
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade de litros de gasolina:979.9877999999999
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade de litros de gasolina:230.5648
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:23:20)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = 2.86 * gasolina +50
imposto = round(((valor * 0.34),2) + valor)
print(imposto)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = round(((valor * 0.34),2) + valor)
                    ~~~~~~~~~~~~~~~~~~~^~~~~~~
TypeError: can only concatenate tuple (not "float") to tuple
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = round(((valor * 0.34),2) + valor)
                    ~~~~~~~~~~~~~~~~~~~^~~~~~~
TypeError: can only concatenate tuple (not "float") to tuple
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = round(((valor * 0.34),2) + valor)
                    ~~~~~~~~~~~~~~~~~~~^~~~~~~
TypeError: can only concatenate tuple (not "float") to tuple
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = round(((valor * 0.34),2) + valor)
                    ~~~~~~~~~~~~~~~~~~~^~~~~~~
TypeError: can only concatenate tuple (not "float") to tuple
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = round(((valor * 0.34),2) + valor)
                    ~~~~~~~~~~~~~~~~~~~^~~~~~~
TypeError: can only concatenate tuple (not "float") to tuple
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = round(((valor * 0.34),2) + valor)
                    ~~~~~~~~~~~~~~~~~~~^~~~~~~
TypeError: can only concatenate tuple (not "float") to tuple
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:25:04)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = roud((2.86 * gasolina +50),2)
imposto = round((valor * 0.34),2) + valor
print(imposto)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor = roud((2.86 * gasolina +50),2)
            ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor = roud((2.86 * gasolina +50),2)
            ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor = roud((2.86 * gasolina +50),2)
            ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor = roud((2.86 * gasolina +50),2)
            ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor = roud((2.86 * gasolina +50),2)
            ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor = roud((2.86 * gasolina +50),2)
            ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:34:05)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = 2.86 * gasolina +50
imposto = roud((valor * 0.34), 2) + valor
print(round((imposto, 2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 4
    print(round((imposto, 2)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 4
    print(round((imposto, 2)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 4
    print(round((imposto, 2)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 4
    print(round((imposto, 2)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 4
    print(round((imposto, 2)
               ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 4
    print(round((imposto, 2)
               ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:36:01)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = 2.86 * gasolina + 50
imposto = roundd(valor * 0.34, 2)
total = valor + imposto
print(round(total, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roundd(valor * 0.34, 2)
              ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roundd(valor * 0.34, 2)
              ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roundd(valor * 0.34, 2)
              ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roundd(valor * 0.34, 2)
              ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roundd(valor * 0.34, 2)
              ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roundd(valor * 0.34, 2)
              ^^^^^^
NameError: name 'roundd' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:35:33)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = 2.86 * gasolina + 50
imposto = roud(valor * 0.34, 2)
total = valor + imposto
print(round(total, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roud(valor * 0.34, 2)
              ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roud(valor * 0.34, 2)
              ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roud(valor * 0.34, 2)
              ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roud(valor * 0.34, 2)
              ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roud(valor * 0.34, 2)
              ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    imposto = roud(valor * 0.34, 2)
              ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:29:23)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = 2.86 * gasolina +50
imposto = (1 + 0.34)
total = valor + imposto
print(imposto)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade de litros de gasolina:1.34
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade de litros de gasolina:1.34
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade de litros de gasolina:1.34
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade de litros de gasolina:1.34
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade de litros de gasolina:1.34
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade de litros de gasolina:1.34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:25:22)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = 2.86 * gasolina +50
imposto = round((valor * 0.34),2) + valor
print(imposto)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade de litros de gasolina:106.854
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade de litros de gasolina:634.8462
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade de litros de gasolina:258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade de litros de gasolina:401.954
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade de litros de gasolina:979.9877999999999
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade de litros de gasolina:230.5648
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:31:35)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = 2.86 * gasolina +50
imposto = (1 + 0.34)
total = roud(imposto + valor), 2)
print(total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 4
    total = roud(imposto + valor), 2)
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 4
    total = roud(imposto + valor), 2)
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 4
    total = roud(imposto + valor), 2)
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 4
    total = roud(imposto + valor), 2)
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 4
    total = roud(imposto + valor), 2)
                                    ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 4
    total = roud(imposto + valor), 2)
                                    ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:30:15)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = 2.86 * gasolina +50
imposto = (1 + 0.34)
total = round((valor + imposto, 2)
print(imposto)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 4
    total = round((valor + imposto, 2)
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 4
    total = round((valor + imposto, 2)
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 4
    total = round((valor + imposto, 2)
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 4
    total = round((valor + imposto, 2)
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 4
    total = round((valor + imposto, 2)
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 4
    total = round((valor + imposto, 2)
                 ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:36:06)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = 2.86 * gasolina + 50
imposto = round(valor * 0.34, 2)
total = valor + imposto
print(round(total, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade de litros de gasolina:106.85
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade de litros de gasolina:634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade de litros de gasolina:258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade de litros de gasolina:401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade de litros de gasolina:979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade de litros de gasolina:230.56
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:21:12)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = 2.86 * gasolina +50
imposto = round((valor * 0.349),) + valor
print(imposto)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade de litros de gasolina:107.744
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade de litros de gasolina:638.7662
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade de litros de gasolina:260.0
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade de litros de gasolina:404.964
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade de litros de gasolina:986.3377999999999
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade de litros de gasolina:232.0648
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:22:55)
-- CODE: 
gasolina = float(input("quantidade de litros de gasolina:"))
valor = 2.86 * gasolina +50
imposto = round()(valor * 0.34),2) + valor)
print(imposto)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    imposto = round()(valor * 0.34),2) + valor)
                                     ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    imposto = round()(valor * 0.34),2) + valor)
                                     ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    imposto = round()(valor * 0.34),2) + valor)
                                     ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    imposto = round()(valor * 0.34),2) + valor)
                                     ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    imposto = round()(valor * 0.34),2) + valor)
                                     ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    imposto = round()(valor * 0.34),2) + valor)
                                     ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
